fix dark mode blockquote again

--- a/src/style.sass
+++ b/src/style.sass
@@ -306,7 +306,7 @@ $hl-border: 3px
         color: white
 
     blockquote
-        border-left: 0.8rem solid white
+        border-left: 0.4rem solid white
 
     button, select, input, textarea, .textarea
         background: #333
